--- a/app/stylesheets/layout.scss
+++ b/app/stylesheets/layout.scss
@@ -10,28 +10,28 @@ ul { list-style:none; margin:0; padding:0; }
 
 /* header */
 header { display:block; background-color:#222; border-top:6px solid #68aff3; height:100px; border-bottom:3px solid #68aff3; }
-#title p a { display:block; color:#eee; font-size:3em; padding-top:.4em; }
+#title p a { display:block; color:#eee; font-size:30px; padding-top:.4em; }
 #title p a:hover { color:#ccc; }
 #title p a span { color:#68aff3; font-size:100%; }
 #title p a:hover span { color:#4B81B4; }
-#title span { font-size:2em; color:#9c9c9c; }
+#title span { font-size:20px; color:#9c9c9c; }
 
 /* navigation */
 nav { display:block; position:absolute; right:0; bottom:0; width:724px; }
 nav ul { float:right; }
 nav ul li { float:left; }
 nav ul li a:link, nav ul li a:visited  { display:block; background-color:$header-link; color:#fff; }
-nav ul li a { padding:.6em 1.4em; font-size:1.4em; margin-left:1em; }
+nav ul li a { padding:.6em 1.4em; font-size:14px; margin-left:1em; }
 nav ul li a:hover { background-color:$nav-link-hover; }
 
 #current_user { display:block; position:absolute; right:0; top:30px; }
-#current_user li { font-size:1.4em; float:right; padding-left:1em;}
+#current_user li { font-size:14px; float:right; padding-left:1em;}
 #current_user li a:hover { color:#ccc; }
 
 /* Main */
 section, aside { display:block; }
 #main { background-color:#E3E3E3; color:#1B1B1B; padding:2em 0; }
-#content, #content_with_nav, sidebar aside { background-color:#fff; padding:.6em; border:1px solid #ccc; }
+#content, #content_with_nav, sidebar aside { background-color:#fff; padding:.6em; border:1px solid #ccc; font-size:14px; }
 
 /* main content */
 #content { width:724px; float:left; padding:1em; }
@@ -44,10 +44,10 @@ body.popup #content { width:550px; }
 body.popup sidebar { display:none; }
 sidebar { width:260px; float:right;}
 sidebar aside { margin-bottom:2em; padding: 15px; }
-sidebar aside h3 { margin: 0 0 6px 0; padding: 0 0 4px 0; font-size: 1.6em; font-weight: bold; color:#365B81; border-bottom: 2px solid #ecebe1; }
+sidebar aside h3 { margin: 0 0 6px 0; padding: 0 0 4px 0; font-size:16px; font-weight: bold; color:#365B81; border-bottom: 2px solid #ecebe1; }
 sidebar aside p.more { margin-top:12px; text-align:center; }
-sidebar aside ul li { font-size:1.2em; }
-sidebar aside p { margin-top:12px; font-size:1.2em; }
+sidebar aside ul li { }
+sidebar aside p { margin-top:12px; }
 
 /* Sidebar - Right - List of text */
 ul.txt li { padding:7px; border-bottom: 1px solid #f3f2e8; overflow: hidden; }
@@ -57,12 +57,12 @@ ul.txt li:hover { background: #EFF2F7; }
 ul.lst li a { display:block; padding:7px; border-bottom: 1px solid #f3f2e8; overflow: hidden; }
 ul.lst li.last a { border: none; }
 ul.lst a:hover { background: #EFF2F7; }
-ul.lst li em { float: right; margin: 0 0 0 5px; font-size: 1em; font-style: normal; font-weight: normal; color: #9c836e; }
+ul.lst li em { float: right; margin: 0 0 0 5px; font-size:10px; font-style: normal; font-weight: normal; color: #9c836e; }
 ul.lst li a img.favicon { float:left; margin:0; width:16px; height:16px; padding-right:8px; }
 
 /* Sidebar - Right - List with ratings*/
 ul.lst-rating li { margin: 0 0 2px 0; position: relative;	 }
-ul.lst-rating li a { position: relative; display: block; padding: 7px; z-index: 2; font-size:1.1em; }
+ul.lst-rating li a { position: relative; display: block; padding: 7px; z-index: 2; font-size:11px; }
 ul.lst-rating li em { float: right; margin: 0 0 0 5px; font-style: normal; font-weight: normal; color: #9c836e; }
 ul.lst-rating li span { position: absolute; top: 0; left: 0; display: block; height: 100%; line-height: 2.55em; text-indent: -9999px; background: #EBE6FF; } 
 ul.lst-rating li:hover span { background: #C6C8E8; }
