--- a/app/views/bookmarks/_header.html.erb
+++ b/app/views/bookmarks/_header.html.erb
@@ -1,16 +1,16 @@
-<div class="tool group ind">
-  <div class="details">
+<div id="bookmark-header" class="show-header">
+  <div class="content">
     <div class="title">
-      <h4><%= link_to @bookmark.title, @bookmark.url, :target => "_blank", :rel => "nofollow" %></h4>
+      <h2><%= @bookmark.title %></h2>
       <%= content_tag(:p, @bookmark.description) unless @bookmark.description.blank? %>
       <%= content_tag(:p, link_to(@bookmark.url, @bookmark.url, :target => "_blank", :rel => "nofollow")) %>
     </div>
 
     <div class="content tools">
-      <ul class="sites">
+      <ul class="mini-sites">
         <%= raw bookmark_sites(@bookmark, 1000) %>
       </ul>
-      <ul class="categories">
+      <ul class="mini-tools">
         <%= raw bookmark_tools(@bookmark, 1000) %>
       </ul>
     </div>
