--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -18,7 +18,7 @@
     <% if @search.hits.empty? %>
       <p>There were no matching sites for your search.</p>
     <% else %>
-      <ul class="sites">
+      <ul id="sites-list" class="sites main-list">
         <%= render @search.results %>
       </ul>
       <%= will_paginate @search.hits %>
