--- a/app/views/tools/bookmarks.erb
+++ b/app/views/tools/bookmarks.erb
@@ -9,7 +9,7 @@
     <div class="title_bar group">
       <h3>We know of <strong><%= pluralize(@tool.bookmarks_count, "bookmark") %></strong> featuring <strong><%= @tool.name %></strong></h3>
     </div>
-    <ul class="bookmarks usings sites tools">
+    <ul class="sublist bookmarks usings">
       <%= render @tool.bookmarks %>
     </ul>
     <% else %>
