--- a/app/stylesheets/lists.scss
+++ b/app/stylesheets/lists.scss
@@ -1,36 +1,13 @@
-/* sites#index, tools#index */
-ul.categories, ul.sites, ul.tools, ul.usings { list-style:none; margin:1em; min-height:1em; }
-.title_bar { font-size: 1.4em; padding: 1em 1em 0 1em; }
-.title_bar h2, .title_bar h3, .title_bar h4 { float:left; }
 
 /* Tools by Category */
 .category-description { font-size:1em; color:#666; }
 
 /* Lists of sites or tools */
-.ind { border-top:1px solid #ccc; padding:1em 0; }
 body.tools-index .ind { border-top:none; }
 div.ind:hover { background-color:#fff; }
 div.ind { border:none; margin: .2em 1em 1em 1em; }
 div.ind h2 { width:640px; float:left; }
-.ind a:hover { text-decoration:underline; }
-.ind a.screenshot { float:left; margin-right:24px; width:110px; height:100px; max-width:110px; max-height:100px; }
-.ind a.screenshot img { max-height:95px; max-width:120px;}
-.ind .title { min-height:66px; margin-left:0px; }
-.ind .title h4 { display:inline; width:480px; font-size:1.6em; float:left; }
-.ind .details { min-height:88px; position:relative; }
-.ind ul.count, .ind > ul.sites  { float:right; list-style:none; margin:0 0 0 20px; }
-.ind ul.count a, .ind > ul.sites a, .ind ul.categories a { display:block; padding:4px; }
-.ind ul.count a { background-color:red; color:white; }
-.ind ul.count a:hover { background-color:blue; }
-.ind ul.count li.sites a { background-color:#f00; }
-.ind ul.count li.sites a:hover { background-color:#D00; }
-.ind ul.count li.links a { background-color:#FFA500; }
-.ind ul.count li.links a:hover { background-color:#ccA500; }
-.ind p { font-size:1.4em; clear:left; }
-.ind .title p, .ind .title h4 { clear:none; width:525px; }
 ul.sites li.ind:last-child, ul.usings li.ind:last-child { border-bottom:1px solid #ccc; }
-a.favicon { width:16px; height:16px; float:left; padding-right:8px; }
-a.favicon img { margin:0; width:16px; height:16px; }
 
 
 ul.sites li.ind .title h4 { width:590px; }
@@ -38,33 +15,14 @@ ul.usings li.ind .title h4 { width:300px; }
 ul.bookmarks li.ind.bookmark .title h4 { width:100%; }
 
 /* sites#show, tools#show */ 
-section.tool .details, section.site .details { }
 section.tool section.tab ul.sites, section.sites section.tab ul.tools { position:relative; }
 .sites .tools li a, .tools .sites li a { display:block; padding:.3em; margin-right:.4em; font-size:1.2em;  }
 .sites .tools, .tools .sites { margin:.4em 0; }
 .sites .tools li, .tools .sites li { float:left; }
-section.tab ul.tools a.screenshot, section.tab ul.tools a.screenshot img,
-section.tab ul.sites a.screenshot, section.tab ul.sites a.screenshot img { max-height:95px; max-width:120px; }
 section.tab ul.tools .details, section.tab ul.sites .details { margin-left:140px; min-height:88px; }
 section.tab ul.usings div.details, ul.usings div.details, ul.sites div.details, ul.tools div.details { margin-left:0; min-height:0; padding:0 1.5em; }
 
 
-/* tools#index, sites#show */
-ul.tools li.tool { border-bottom:1px solid #c3c0bd; padding-top:1em; }
-ul.tools li.tool .content { position:relative; }
-
-/* tools#index sites list */
-.tools .sites li a { background-color:#ff0; }
-.tools .sites li a:hover { background-color:#dddd11; }
-/* tools#index categories list */
-.tool .categories { position:absolute; bottom:0; right:0; margin:0; padding:0; }
-.tool .categories li { margin-left:.2em; float:right; }
-.tool .categories li a { background-color:#ccc; }
-.tool .categories li a:hover { background-color:#aaa; }
-/* tools#show list of sites using  */
-.tool .using { clear:both; margin:1.5em 0 0 0; }
-.tool .using li { float:left; margin-right:10px; }
-.tool .using li a { background-color:#ccc; padding:.4em; }
 
 
 
@@ -80,35 +38,12 @@ section.site ul.tools li { border-bottom:1px solid #c3c0bd; padding-top:1em; }
 
 
 
-/* Counts */
-ul.count { color:#fff; width:120px; }
-ul.count li.alexa, ul.sort-alexa li.ind li.alexa { background-color:blue; color:#eee; }
-ul.count li.pagerank, ul.sort-pagerank li.ind li.pagerank { background-color:green; color:#fff; }
-ul.count li { margin:0; position: relative;	 }
-ul.count li span, ul.count li a { display: block; padding: 7px; z-index: 2; font-size:1.1em; }
-ul.count li em { float: right; font-style:normal; font-weight:bold; padding-left:12px; }
-
 
 /* Usings */
-ul.usings li.ind { padding: .8em .8em .6em; }
-ul.usings li.ind .title { margin-left:0; min-height:0px; }
-ul.usings li.ind .title h4 { float:left; font-size:1.6em; margin:0; padding:.3em 0; width:auto; }
-ul.usings li.ind h4 span.url { display:none; font-size:.8em; color:#888; }
-ul.usings li.ind:hover h4 span.url { display:inline; margin-left:1em; }
-ul.usings li.ind h4 img.favicon { margin:0 .5em 0 0; }
-ul.usings li.ind:hover a.comments { display:block; }
-ul.usings li.ind ul li { margin:0; }
-ul.usings li.ind ul.tools, ul.usings li.ind ul.categories { min-height:0; margin:0; max-width:400px; float:right; position:relative; margin-top:2px; }
-ul.usings li.ind ul.tools li, ul.usings li.ind ul.categories li { float:right;}
-ul.usings li.ind ul.tools li a, ul.usings li.ind ul.categories li a { display: block; font-size: 1.1em; margin-right: 0.2em; padding: 0.3em; }
-ul.usings li.ind ul.tools li a.comments, ul.usings li.ind ul.categories li a.comments { background-color:#ff0; }
-ul.usings li.ind ul.tools li a.comments:hover, ul.usings li.ind ul.categories li a.comments:hover { background-color:#dddd11; }
 ul.usings li.ind p { padding-top:.4em; }
 ul.usings li.ind:hover p a.manage_site_tools { display:block; float:right; }
 ul.usings li.ind p a.manage_site_tools { display:none; }
 ul.usings li.pagerank, ul.usings li.alexa, ul.usings li.popularity { display:none; font-size:1.2em; margin-left:.4em; padding:.3em; }
-ul.usings li.ind ul.categories li a.comments, ul.usings li.ind ul.tools li a.comments { float:right; display:none; }
-ul.usings li.ind:hover ul.categories li a.comments, ul.usings li.ind:hover ul.tools li a.comments { display:block; }
 
 
 
@@ -124,3 +59,4 @@ ul.sites.single li.ind:last-child, ul.usings.single li.ind:last-child { border-t
 ul.usings ul.bookmarks { clear:both; }
 ul.usings ul.bookmarks li { border-bottom:1px solid #e7e7e7; padding:4px 0; }
 ul.usings ul.bookmarks li:last-child { border-bottom:none; }
+ul.usings ul.bookmarks
