--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -4,10 +4,11 @@
   <%= render 'header' %>
   <%= render 'nav' %>
 
-
-
   <section class="tab">
-    <ul class="usings sites tools">
+    <div class="title_bar group">
+      <h3><%= raw bookmark_references(@bookmark) %></h3>
+    </div>
+    <ul class="sublist usings sites tools">
       <%= render :partial => 'usings/using_site', :collection => @bookmark.bookmark_connections.collect(&:using) %>
       <%= render :partial => 'usings/using_tool', :collection => @bookmark.bookmark_connections.collect(&:using) %>
     </ul>
