--- a/app/views/sites/_header.erb
+++ b/app/views/sites/_header.erb
@@ -1,14 +1,12 @@
-<div class="site group ind">
-  <div class="details">
-    <div class="title">
-      <h2><% if @site.has_favicon? %><a href="<%= @site.url %>" class="favicon" rel="nofollow"><img src="<%= @site.full_favicon_url %>" /></a><% end %><%= @site.title %></h2>
-      <ul class="count">
-        <li class="alexa"><span><em><%= number_with_delimiter(@site.alexa_global_rank) %></em>Alexa</span></li>
-        <li class="pagerank pagerank-<%= @site.google_pagerank %>"><span><em><%= @site.google_pagerank %></em>Pagerank</span></li>
-      </ul>
-      <p><%= link_to @site.url, @site.url, :target => "_blank", :rel => "nofollow" %>
-      <%= content_tag(:p, @site.description) unless @site.description.blank? %>
-      <%= content_tag(:p, "Based in #{@site.display_location}") unless @site.display_location.blank? %>
-    </div>
+<div id="site-header" class="show-header">
+  <div class="content">
+    <h2><% if @site.has_favicon? %><a href="<%= @site.url %>" class="favicon" rel="nofollow"><img src="<%= @site.full_favicon_url %>" /></a><% end %><%= @site.title %></h2>
+    <ul class="count">
+      <li class="alexa"><span><em><%= number_with_delimiter(@site.alexa_global_rank) %></em>Alexa</span></li>
+      <li class="pagerank pagerank-<%= @site.google_pagerank %>"><span><em><%= @site.google_pagerank %></em>Pagerank</span></li>
+    </ul>
+    <p><%= link_to @site.url, @site.url, :target => "_blank", :rel => "nofollow" %>
+    <%= content_tag(:p, @site.description) unless @site.description.blank? %>
+    <%= content_tag(:p, "Based in #{@site.display_location}") unless @site.display_location.blank? %>
   </div>
 </div>
