--- a/app/views/sites/_show.erb
+++ b/app/views/sites/_show.erb
@@ -16,7 +16,7 @@
         </ul>
       </div>
     </div>
-    <ul class="usings sites <%= sorting_class(params[:sort]) %>">
+    <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>">
       <%= render :partial => 'usings/using_tool', :collection => @usings %>
     </ul>
     <% else %>
