--- a/app/views/tools/_sites.erb
+++ b/app/views/tools/_sites.erb
@@ -13,7 +13,7 @@
       </ul>
     </div>
   </div>
-  <ul class="usings sites <%= sorting_class(params[:sort]) %>">
+  <ul id="tool-sites-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>">
     <%= render :partial => 'usings/using_site', :collection => sites %>
   </ul>
   <%= will_paginate sites %>
