--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -39,7 +39,7 @@ header {
 #title p a {
   display: block;
   color: #eee;
-  font-size: 3em;
+  font-size: 30px;
   padding-top: .4em; }
 
 #title p a:hover {
@@ -53,7 +53,7 @@ header {
   color: #4B81B4; }
 
 #title span {
-  font-size: 2em;
+  font-size: 20px;
   color: #9c9c9c; }
 
 /* navigation */
@@ -77,7 +77,7 @@ nav ul li a:link, nav ul li a:visited {
 
 nav ul li a {
   padding: .6em 1.4em;
-  font-size: 1.4em;
+  font-size: 14px;
   margin-left: 1em; }
 
 nav ul li a:hover {
@@ -90,7 +90,7 @@ nav ul li a:hover {
   top: 30px; }
 
 #current_user li {
-  font-size: 1.4em;
+  font-size: 14px;
   float: right;
   padding-left: 1em; }
 
@@ -109,7 +109,8 @@ section, aside {
 #content, #content_with_nav, sidebar aside {
   background-color: #fff;
   padding: .6em;
-  border: 1px solid #ccc; }
+  border: 1px solid #ccc;
+  font-size: 14px; }
 
 /* main content */
 #content {
@@ -147,7 +148,7 @@ sidebar aside {
 sidebar aside h3 {
   margin: 0 0 6px 0;
   padding: 0 0 4px 0;
-  font-size: 1.6em;
+  font-size: 16px;
   font-weight: bold;
   color: #365B81;
   border-bottom: 2px solid #ecebe1; }
@@ -156,12 +157,8 @@ sidebar aside p.more {
   margin-top: 12px;
   text-align: center; }
 
-sidebar aside ul li {
-  font-size: 1.2em; }
-
 sidebar aside p {
-  margin-top: 12px;
-  font-size: 1.2em; }
+  margin-top: 12px; }
 
 /* Sidebar - Right - List of text */
 ul.txt li {
@@ -188,7 +185,7 @@ ul.lst a:hover {
 ul.lst li em {
   float: right;
   margin: 0 0 0 5px;
-  font-size: 1em;
+  font-size: 10px;
   font-style: normal;
   font-weight: normal;
   color: #9c836e; }
@@ -210,7 +207,7 @@ ul.lst-rating li a {
   display: block;
   padding: 7px;
   z-index: 2;
-  font-size: 1.1em; }
+  font-size: 11px; }
 
 ul.lst-rating li em {
   float: right;
