--- a/public/stylesheets/lists.css
+++ b/public/stylesheets/lists.css
@@ -1,346 +1,78 @@
-/* sites#index, tools#index */
-ul.categories, ul.sites, ul.tools, ul.usings {
-  list-style: none;
-  margin: 1em;
-  min-height: 1em; }
-
-.title_bar {
-  font-size: 1.4em;
-  padding: 1em 1em 0 1em; }
-
-.title_bar h2, .title_bar h3, .title_bar h4 {
-  float: left; }
-
-/* Tools by Category */
-.category-description {
-  font-size: 1em;
-  color: #666; }
-
-/* Lists of sites or tools */
-.ind {
-  border-top: 1px solid #ccc;
-  padding: 1em 0; }
-
-body.tools-index .ind {
-  border-top: none; }
-
-div.ind:hover {
-  background-color: #fff; }
-
-div.ind {
-  border: none;
-  margin: .2em 1em 1em 1em; }
-
-div.ind h2 {
-  width: 640px;
-  float: left; }
-
-.ind a:hover {
-  text-decoration: underline; }
-
-.ind a.screenshot {
-  float: left;
-  margin-right: 24px;
-  width: 110px;
-  height: 100px;
-  max-width: 110px;
-  max-height: 100px; }
-
-.ind a.screenshot img {
-  max-height: 95px;
-  max-width: 120px; }
-
-.ind .title {
-  min-height: 66px;
-  margin-left: 0px; }
-
-.ind .title h4 {
-  display: inline;
-  width: 480px;
-  font-size: 1.6em;
-  float: left; }
-
-.ind .details {
-  min-height: 88px;
-  position: relative; }
-
-.ind ul.count, .ind > ul.sites {
-  float: right;
-  list-style: none;
-  margin: 0 0 0 20px; }
-
-.ind ul.count a, .ind > ul.sites a, .ind ul.categories a {
-  display: block;
-  padding: 4px; }
-
-.ind ul.count a {
-  background-color: red;
-  color: white; }
-
-.ind ul.count a:hover {
-  background-color: blue; }
-
-.ind ul.count li.sites a {
-  background-color: #f00; }
-
-.ind ul.count li.sites a:hover {
-  background-color: #D00; }
-
-.ind ul.count li.links a {
-  background-color: #FFA500; }
-
-.ind ul.count li.links a:hover {
-  background-color: #ccA500; }
-
-.ind p {
-  font-size: 1.4em;
-  clear: left; }
-
-.ind .title p, .ind .title h4 {
-  clear: none;
-  width: 525px; }
-
-ul.sites li.ind:last-child, ul.usings li.ind:last-child {
-  border-bottom: 1px solid #ccc; }
-
-a.favicon {
-  width: 16px;
-  height: 16px;
-  float: left;
-  padding-right: 8px; }
-
-a.favicon img {
-  margin: 0;
-  width: 16px;
-  height: 16px; }
-
-ul.sites li.ind .title h4 {
-  width: 590px; }
-
-ul.usings li.ind .title h4 {
-  width: 300px; }
-
-ul.bookmarks li.ind.bookmark .title h4 {
-  width: 100%; }
-
-/* sites#show, tools#show */
-section.tool section.tab ul.sites, section.sites section.tab ul.tools {
-  position: relative; }
-
-.sites .tools li a, .tools .sites li a {
-  display: block;
-  padding: .3em;
-  margin-right: .4em;
-  font-size: 1.2em; }
-
-.sites .tools, .tools .sites {
-  margin: .4em 0; }
-
-.sites .tools li, .tools .sites li {
-  float: left; }
-
-section.tab ul.tools a.screenshot, section.tab ul.tools a.screenshot img,
-section.tab ul.sites a.screenshot, section.tab ul.sites a.screenshot img {
-  max-height: 95px;
-  max-width: 120px; }
-
-section.tab ul.tools .details, section.tab ul.sites .details {
-  margin-left: 140px;
-  min-height: 88px; }
-
-section.tab ul.usings div.details, ul.usings div.details, ul.sites div.details, ul.tools div.details {
-  margin-left: 0;
-  min-height: 0;
-  padding: 0 1.5em; }
-
-/* tools#index, sites#show */
-ul.tools li.tool {
-  border-bottom: 1px solid #c3c0bd;
-  padding-top: 1em; }
-
-ul.tools li.tool .content {
-  position: relative; }
-
-/* tools#index sites list */
-.tools .sites li a {
-  background-color: #ff0; }
-
-.tools .sites li a:hover {
-  background-color: #dddd11; }
-
-/* tools#index categories list */
-.tool .categories {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: 0;
-  padding: 0; }
-
-.tool .categories li {
-  margin-left: .2em;
-  float: right; }
-
-.tool .categories li a {
-  background-color: #ccc; }
-
-.tool .categories li a:hover {
-  background-color: #aaa; }
-
-/* tools#show list of sites using  */
-.tool .using {
-  clear: both;
-  margin: 1.5em 0 0 0; }
-
-.tool .using li {
-  float: left;
-  margin-right: 10px; }
-
-.tool .using li a {
-  background-color: #ccc;
-  padding: .4em; }
-
-/* sites#show */
-section.site .site_details {
-  margin-left: 220px; }
-
-section.site ul.tools {
-  list-style: none; }
-
-section.site ul.tools li {
-  border-bottom: 1px solid #c3c0bd;
-  padding-top: 1em; }
-
-/* sites#show tools list */
-.sites .tools li a {
-  background-color: #FFA500;
-  color: #000; }
-
-.sites .tools li a:hover {
-  background-color: #ccA500;
-  color: #000; }
-
-/* Counts */
-ul.count {
-  color: #fff;
-  width: 120px; }
-
-ul.count li.alexa, ul.sort-alexa li.ind li.alexa {
-  background-color: blue;
-  color: #eee; }
-
-ul.count li.pagerank, ul.sort-pagerank li.ind li.pagerank {
-  background-color: green;
-  color: #fff; }
-
-ul.count li {
-  margin: 0;
-  position: relative; }
-
-ul.count li span, ul.count li a {
-  display: block;
-  padding: 7px;
-  z-index: 2;
-  font-size: 1.1em; }
-
-ul.count li em {
-  float: right;
-  font-style: normal;
-  font-weight: bold;
-  padding-left: 12px; }
-
-/* Usings */
-ul.usings li.ind {
-  padding: .8em .8em .6em; }
-
-ul.usings li.ind .title {
-  margin-left: 0;
-  min-height: 0px; }
-
-ul.usings li.ind .title h4 {
-  float: left;
-  font-size: 1.6em;
-  margin: 0;
-  padding: .3em 0;
-  width: auto; }
-
-ul.usings li.ind h4 span.url {
-  display: none;
-  font-size: .8em;
-  color: #888; }
-
-ul.usings li.ind:hover h4 span.url {
-  display: inline;
-  margin-left: 1em; }
-
-ul.usings li.ind h4 img.favicon {
-  margin: 0 .5em 0 0; }
-
-ul.usings li.ind:hover a.comments {
-  display: block; }
-
-ul.usings li.ind ul li {
-  margin: 0; }
-
-ul.usings li.ind ul.tools, ul.usings li.ind ul.categories {
-  min-height: 0;
-  margin: 0;
-  max-width: 400px;
-  float: right;
-  position: relative;
-  margin-top: 2px; }
-
-ul.usings li.ind ul.tools li, ul.usings li.ind ul.categories li {
-  float: right; }
-
-ul.usings li.ind ul.tools li a, ul.usings li.ind ul.categories li a {
-  display: block;
-  font-size: 1.1em;
-  margin-right: 0.2em;
-  padding: 0.3em; }
-
-ul.usings li.ind ul.tools li a.comments, ul.usings li.ind ul.categories li a.comments {
-  background-color: #ff0; }
-
-ul.usings li.ind ul.tools li a.comments:hover, ul.usings li.ind ul.categories li a.comments:hover {
-  background-color: #dddd11; }
-
-ul.usings li.ind p {
-  padding-top: .4em; }
-
-ul.usings li.ind:hover p a.manage_site_tools {
-  display: block;
-  float: right; }
-
-ul.usings li.ind p a.manage_site_tools {
-  display: none; }
-
-ul.usings li.pagerank, ul.usings li.alexa, ul.usings li.popularity {
-  display: none;
-  font-size: 1.2em;
-  margin-left: .4em;
-  padding: .3em; }
-
-ul.usings li.ind ul.categories li a.comments, ul.usings li.ind ul.tools li a.comments {
-  float: right;
-  display: none; }
-
-ul.usings li.ind:hover ul.categories li a.comments, ul.usings li.ind:hover ul.tools li a.comments {
-  display: block; }
-
-/* 
-ul.sort-alexa li.ind li.alexa, ul.sort-pagerank li.ind li.pagerank { display:inline; }
-ul.sort-sites li.ind li.popularity { display:inline; background-color:#bbb; font-size:1.1em;}
+/*
+Syntax error: Invalid CSS after "...gs ul.bookmarks": expected "{", was ""
+        on line 62 of ./app/stylesheets/lists.scss
+
+57: ul.sites.single li.ind:last-child, ul.usings.single li.ind:last-child { border-top:none; border-bottom:1px solid #ccc; }
+58: 
+59: ul.usings ul.bookmarks { clear:both; }
+60: ul.usings ul.bookmarks li { border-bottom:1px solid #e7e7e7; padding:4px 0; }
+61: ul.usings ul.bookmarks li:last-child { border-bottom:none; }
+62: ul.usings ul.bookmarks
+
+Backtrace:
+./app/stylesheets/lists.scss:62
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:838:in `expected'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:813:in `expected'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:809:in `tok!'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:338:in `block'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:333:in `ruleset'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:356:in `block_child'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:350:in `block_contents'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:57:in `stylesheet'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/scss/parser.rb:26:in `parse'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/engine.rb:213:in `_to_tree'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/engine.rb:179:in `block in to_tree'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/haml/util.rb:294:in `silence_haml_warnings'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/engine.rb:179:in `to_tree'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/files.rb:44:in `tree_for'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/plugin.rb:223:in `update_stylesheet'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/plugin.rb:88:in `block (2 levels) in update_stylesheets'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/plugin.rb:81:in `each'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/plugin.rb:81:in `block in update_stylesheets'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/plugin.rb:79:in `each'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/plugin.rb:79:in `update_stylesheets'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/plugin.rb:50:in `check_for_updates'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/haml-3.0.25/lib/sass/plugin/rack.rb:40:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/warden-1.0.3/lib/warden/manager.rb:35:in `block in call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/warden-1.0.3/lib/warden/manager.rb:34:in `catch'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/warden-1.0.3/lib/warden/manager.rb:34:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/head.rb:14:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/rack-1.2.1/lib/rack/methodoverride.rb:24:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/flash.rb:182:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/cookies.rb:295:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/activerecord-3.0.3/lib/active_record/query_cache.rb:32:in `block in call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/activerecord-3.0.3/lib/active_record/connection_adapters/abstract/query_cache.rb:28:in `cache'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/activerecord-3.0.3/lib/active_record/query_cache.rb:12:in `cache'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/activerecord-3.0.3/lib/active_record/query_cache.rb:31:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/activerecord-3.0.3/lib/active_record/connection_adapters/abstract/connection_pool.rb:353:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/callbacks.rb:46:in `block in call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/activesupport-3.0.3/lib/active_support/callbacks.rb:415:in `_run_call_callbacks'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/rack-1.2.1/lib/rack/sendfile.rb:107:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/show_exceptions.rb:46:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/railties-3.0.3/lib/rails/rack/logger.rb:13:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/rack-1.2.1/lib/rack/runtime.rb:17:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/activesupport-3.0.3/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/rack-1.2.1/lib/rack/lock.rb:11:in `block in call'
+<internal:prelude>:10:in `synchronize'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/rack-1.2.1/lib/rack/lock.rb:11:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/actionpack-3.0.3/lib/action_dispatch/middleware/static.rb:30:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/hoptoad_notifier-2.4.7/lib/hoptoad_notifier/user_informer.rb:12:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/railties-3.0.3/lib/rails/application.rb:168:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/railties-3.0.3/lib/rails/application.rb:77:in `method_missing'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/railties-3.0.3/lib/rails/rack/debugger.rb:21:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/railties-3.0.3/lib/rails/rack/log_tailer.rb:14:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/rack-1.2.1/lib/rack/content_length.rb:13:in `call'
+/Users/adam/.rvm/gems/ruby-1.9.2-p0/gems/rack-1.2.1/lib/rack/handler/webrick.rb:52:in `service'
+/Users/adam/.rvm/rubies/ruby-1.9.2-p0/lib/ruby/1.9.1/webrick/httpserver.rb:111:in `service'
+/Users/adam/.rvm/rubies/ruby-1.9.2-p0/lib/ruby/1.9.1/webrick/httpserver.rb:70:in `run'
+/Users/adam/.rvm/rubies/ruby-1.9.2-p0/lib/ruby/1.9.1/webrick/server.rb:183:in `block in start_thread'
 */
-ul.sites.single li.ind:last-child, ul.usings.single li.ind:last-child {
-  border-top: none;
-  border-bottom: 1px solid #ccc; }
-
-ul.usings ul.bookmarks {
-  clear: both; }
-
-ul.usings ul.bookmarks li {
-  border-bottom: 1px solid #e7e7e7;
-  padding: 4px 0; }
-
-ul.usings ul.bookmarks li:last-child {
-  border-bottom: none; }
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: Invalid CSS after \"...gs ul.bookmarks\": expected \"{\", was \"\"\A         on line 62 of ./app/stylesheets/lists.scss\A \A 57: ul.sites.single li.ind:last-child, ul.usings.single li.ind:last-child { border-top:none; border-bottom:1px solid #ccc; }\A 58: \A 59: ul.usings ul.bookmarks { clear:both; }\A 60: ul.usings ul.bookmarks li { border-bottom:1px solid #e7e7e7; padding:4px 0; }\A 61: ul.usings ul.bookmarks li:last-child { border-bottom:none; }\A 62: ul.usings ul.bookmarks"; }
