--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,7 +5,7 @@
   float: right; }
 
 p.breadcrumbs {
-  font-size: .8em; }
+  font-size: 8px; }
 
 a.add {
   background: url(https://s3.amazonaws.com/s.lineofthought.com/images/icons/13-plus.png) no-repeat;
@@ -20,7 +20,7 @@ img.screenshot, .screenshot img {
   float: left; }
 
 a.external {
-  font-size: 1em; }
+  font-size: 10px; }
 
 a:link, a:visited {
   color: #3792B3;
@@ -35,13 +35,13 @@ section.announcement {
   margin-bottom: 1em; }
 
 section.announcement p {
-  font-size: 1.8em;
+  font-size: 18px;
   color: #333;
   margin: .5em 1em;
   text-align: center; }
 
 section.announcement p.title {
-  font-size: 2.4em;
+  font-size: 24px;
   color: #666;
   margin: .5em 0; }
 
@@ -58,7 +58,7 @@ section.tab {
 section.tab p.empty_message, section.tab p.main_message {
   color: #444;
   text-align: center;
-  font-size: 1.6em;
+  font-size: 16px;
   margin: 1.5em 0 1em; }
 
 /* Tabs */
@@ -88,7 +88,7 @@ ul.tabs a:link, ul.tabs a:visited {
 
 ul.tabs a {
   background-color: #f3f3f3;
-  font-size: 1.6em;
+  font-size: 16px;
   position: relative;
   top: 1px; }
 
@@ -194,7 +194,7 @@ ul.tabs a:hover {
 
 div.disqus_wrapper {
   padding: 1em;
-  font-size: 1.4em; }
+  font-size: 14px; }
 
 sidebar aside.search input[type='text'] {
   width: 160px; }
@@ -219,3 +219,32 @@ body.sites-bookmarks li.sites-bookmarks a:link, body.sites-bookmarks li.sites-bo
   border-bottom: 1px solid #fff;
   background: #fff;
   color: #000; }
+
+/* individual tool and site pages */
+.show-header {
+  position: relative; }
+
+.show-header h2 {
+  display: inline; }
+
+.show-header .content {
+  padding: .4em .4em 1em; }
+
+#site-header {
+  min-height: 88px; }
+
+#site-header h2, #site-header p {
+  max-width: 600px; }
+
+#tool-header {
+  min-height: 110px; }
+
+#tool-header h2, #tool-header p {
+  max-width: 600px; }
+
+#tool-header .mini-categories {
+  bottom: 20px;
+  right: 6px; }
+
+#bookmark-header {
+  margin-bottom: 20px; }
