--- a/app/stylesheets/new-list.scss
+++ b/app/stylesheets/new-list.scss
@@ -1,21 +1,22 @@
 /* All list */
 ul.categories, ul.sites, ul.tools, ul.usings,
 ul.mini-categories, ul.mini-sites, ul.mini-tools { list-style:none; margin:0; padding:0; }
-ul.categories, ul.sites, ul.tools, ul.usings { margin:1em; min-height:1em; }
+ul.categories, ul.sites, ul.tools, ul.usings { min-height:1em; }
 li.ind a:hover { text-decoration:underline; }
 li.ind { border-bottom:1px solid #ccc; padding:1em 0; }
+li.ind:first-child { border-top:1px solid #ccc; }
 a.favicon { width:16px; height:16px; float:left; padding-right:8px; }
 a.favicon img { margin:0; width:16px; height:16px; }
 
 /* Bar listing what's currenly shown with sorting options sites#index, tools#index */
-.title_bar { padding: 1em 1em 0 1em; }
+.title_bar { padding: 1em 1em 0 .5em; }
 .title_bar h2, .title_bar h3, .title_bar h4 { float:left; }
 
 
 /* Main-list pages - tools#index, sites#index, bookmarks#index */
 ul.main-list li.ind { padding:1em 0; position:relative; }
 ul.main-list li.ind p { margin-top:4px; }
-ul.main-list li.ind .details { margin:0; padding:0 1.5em; }
+ul.main-list li.ind .details { margin:0; padding:0 .5em; }
 ul.main-list li.ind .content { position:relative; }
 ul.main-list li.ind .title { margin-left:0px; }
 ul.main-list li.ind .title h4 { display:inline; font-size:16px; margin-bottom:10px; }
@@ -74,7 +75,6 @@ ul.count li.pagerank, ul.sort-pagerank li.ind li.pagerank { background-color: gr
 
 /* Sub-list pages tools#show, tools#bookmarks, sites#show, sites#bookmarks, bookmarks#show */
 .sublist li.ind { padding: 0.8em 0.8em 0.6em;  }
-.sublist li.ind:first-child { border-top:1px solid #ccc; }
 .sublist li.ind .title { margin-left:0; min-height:0px; position:relative; }
 .sublist li.ind .title h4 { float:left; font-size:16px; margin:0; padding:.3em 0; width:auto; }
 .sublist li.ind a.comments { display:none; background-color:#ff0; float:right; margin-right:6px; }
