Updated change password page

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -10,7 +10,8 @@
       <%= f.text_field :email %></p>
 
       <p><%= f.submit "Send me reset password instructions" %></p>
-    <% end %>  </section>
+    <% end %>
+  </section>
 </section>
 
 <sidebar>
