--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,23 @@
-<h2>Change your password</h2>
+<% title "Change your password" %>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+<section id="content" class="main">
+  <h2><%= @title %></h2>
+  <section>
+    <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <%= f.hidden_field :reset_password_token %>
 
-  <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
+      <p><%= f.label :password %><br />
+      <%= f.password_field :password %></p>
 
-  <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
+      <p><%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation %></p>
 
-  <p><%= f.submit "Change my password" %></p>
-<% end %>
+      <p><%= f.submit "Change my password" %></p>
+    <% end %>
+  </section>
+</section>
 
-<%= render :partial => "devise/shared/links" %>
+<sidebar>
+  <%= render :partial => "devise/shared/links" %>
+</sidebar>
