--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,8 @@
         <li><%= link_to "Logout", destroy_user_session_path %></li>
         <li><a href="/users/edit">Account</a></li>
       <% else %>
-        <li><a href="<%= new_user_session_path %>">Sign In</a></li>
-        <li><a href="<%= new_user_registration_path %>">Sign Up</a></li>
+        <li><a href="<%= new_user_session_url(:protocol => "https") %>">Sign In</a></li>
+        <li><a href="<%= new_user_registration_url(:protocol => "https") %>">Sign Up</a></li>
       <% end %>
     </ul>
     <nav>
